Infrastructure/Kubernetes/standalone/namespace-config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: expensetracker
  labels:
    app.kubernetes.io/name: expensetracker
    app.kubernetes.io/managed-by: argocd
    name: expensetracker  # For network policy selector
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
